--- a/_i18n/en/_posts/2019-10-18-堅強民主-數位民國.md
+++ b/_i18n/en/_posts/2019-10-18-堅強民主-數位民國.md
@@ -1,48 +1,50 @@
 ---
   layout: "post"
-  title: "Strong democracy, digital country"
-  excerpt: "In Taiwan, an online platform based on artificial intelligence effectively prevents network whitening and gives citizens the opportunity to express their opinions."
+  title: "A Strong Democracy Is a Digital Democracy"
+  excerpt: "In Taiwan, online platforms powered by artificial intelligence are giving citizens a chance to have their say — while keeping the trolls at bay."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/b/bd32d0cabad24eee28e50b57c48e6df591c5597d.jpeg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
 
-🗺 Democracy will improve as more and more people participate. As long as everyone is concerned about seeking consensus rather than differentiation, digital technology is still one of the best ways to increase participation. 
+🗺 Democracy improves as more people participate. And digital technology remains one of the best ways to improve participation — as long as the focus is on finding common ground and creating consensus, not division.
 
-🎨 Taiwan has been committed to implementing this concept in recent years. Therefore, the government and the scientific and technological community have cooperated to establish an online platform and related digital measures to allow citizens to make recommendations for policy reform. Now, Taiwan is practicing democracy through "outsourcing" and building a more responsive government. 
+🎨 These are lessons Taiwan has taken to heart in recent years, with the government and the tech community partnering to create online platforms and other digital initiatives that allow everyday citizens to propose and express their opinion on policy reforms. Today, Taiwan is crowdsourcing democracy to create a more responsive government.
 
- This effort to improve the transparency of the government stems from the moment when the Taiwanese people were angry with the government for lack of openness and political responsibility. 
+🌻 Fittingly, this movement, which today aims to increase government transparency, was born in a moment of national outrage over a lack of openness and accountability in politics.
 
- On March 18th, 2014, young social activists with hundreds of college students as the main body rushed into the Legislative Yuan to occupy the forum. Because the government was considering signing a "Service Agreement" with Beijing's many doubts at the time, and on March 17, the ruling Kuomintang legislators announced the passage of the Service Agreement in just 30 seconds in the disputed standing committee. Let civil society be at a loss. 
+🙋 On March 18, 2014, hundreds of young activists, most of them college students, [occupied Taiwan’s legislature](https://www.reuters.com/article/us-taiwan-legislature/taiwan-students-occupy-legislature-over-china-trade-deal-idUSBREA2I04S20140319) to express their profound opposition to a new trade pact with Beijing then under consideration, as well as the secretive manner in which it was being pushed through Parliament by the Kuomintang, the ruling party.
 
- The protesters’ appeal is to “reject the black box and return to the service” and ask the government to establish a more transparent bill review process. The 22-day occupation campaign ended after the government promised to strengthen legislative oversight of trade agreements. (The agreement has not been approved by the legislature so far.) However, the polls after the occupation showed that 76% of the people are still dissatisfied with the government, which shows the crisis of trust caused by the service. 
+🔍 Catalyzing what came to be known as the [Sunflower Movement](https://carnegieendowment.org/2018/08/02/activist-legacy-of-taiwan-s-sunflower-movement-pub-76966), the protesters demanded that the pact be scraped and that the government institute a more transparent ratification process.
 
-| To compensate for this rift, the government at the time began to contact the citizen technology community g0v (zero-hour government), a group of civic-minded hackers who have been trying to improve government transparency through various open source initiatives. In the 318 campaign, g0v also actively participated in the occupation site to assist in the transparent convergence of information. The actions of these citizen hackers have drawn the attention of the government. 
+🚧 The occupation, which drew widespread public support, [ended](https://sinosphere.blogs.nytimes.com/2014/04/10/students-prepare-to-end-occupation-of-taiwans-legislature/?action=click&module=RelatedCoverage&pgtype=Article&region=Footer) a little more than three weeks later, after the government promised greater legislative oversight of the trade pact. (To this day, the pact has yet to be approved by Taiwan’s legislature.) A poll released after the occupation, however, showed that 76 percent of the nation remained dissatisfied with the Kuomintang government, illustrating the crisis of trust caused by the trade deal dispute.
 
-| In December 2014, Cai Yuling, then the Administrative Council Member of the Executive Yuan, proposed the hackathon of the government at g0v, hoping to establish a neutral third-party platform, so that the government can timely Various online community friends exchanged views and formed a consensus. 
+🔗 To heal this rift and communicate better with everyday citizens, the administration reached out to a group of civic-minded hackers and coders, known as [g0v](http://g0v.asia/) (pronounced “gov-zero”), who had been seeking to improve government transparency through the creation of open-source tools. The organization had come to the attention of the government during the Sunflower occupation, when g0v hackers had worked closely with the protesters.
 
-🍲 A number of contributors from the g0v government at zero time collaborated with the Executive Yuan in 2015 on the vTaiwan platform. This community-run project aims to effectively bring together stakeholders from government, economic and social sectors to discuss policies related to the digital economy. Although the government has not responded to vTaiwan's proposed obligations (this may change), the results of vTaiwan's work can often be translated into specific government actions. Currently vTaiwan has processed 30 topics. 
+🔢 In December 2014, Jaclyn Tsai, a government minister focused on digital technology, attended a g0v-sponsored hackathon and proposed the establishment of a neutral platform where various online communities could exchange policy ideas.
 
- The interactive digital tool “Pol.is” is often used during vTaiwan's discussion to ensure that policy discussions among multiple stakeholders are rational and consistent. With Pol.is, any vTaiwan participant can post comments about the policy topic being discussed. The important thing is that other users can't respond directly to these comments, just click "Agree", "Disagree" or "Skip/Unsure" on each comment instead of provoking and defamatory. 
+🍲 Several contributors from g0v responded by partnering with the government to start the [vTaiwan](https://vtaiwan.tw) platform in 2015. VTaiwan (which stands for “virtual Taiwan”) brings together representatives from the public, private and social sectors to debate policy solutions to problems primarily related to the digital economy. Since it began, vTaiwan has tackled 30 issues, relying on a mix of online debate and face-to-face discussions with stakeholders. Though the government is not obligated to follow vTaiwan’s recommendations (a policy that may soon change), the group’s work often leads to concrete action.
 
-💡 Pol.is analyzes these opinions through instant machine learning and produces an interactive chart that groups the same participants in the same block and separates them from other users with different ideas. . In this way, each participant can see their position on the spectrum of opinion and the gap with each group, and then start thinking about how to find the intersection of each other's opinions. In an ideal situation, this will attract more people to express their opinions and join the discussion, creating a path for consensus. 
+💞 VTaiwan partly relies on a unique digital tool known as Pol.is to ensure its crowdsourced policy debates remain civil and reach consensus. Using Pol.is, any vTaiwan participant can post a comment about the topic or policy being discussed. Crucially, other users cannot directly reply to these statements, which reduces the likelihood of trolling and abuse. Instead, they can click “agree,” “disagree” or “pass/unsure” on each comment.
 
-📶 vTaiwan is often used to solve some particularly difficult digital policy issues. For example, in 2015, Uber triggered strong opposition from taxi drivers who helped to resolve how Uber's discussion was deadlocked; over the years, online wine sales have been deadlocked between companies and social groups, and in 2016, hundreds of people used it. The public of the platform proposed new regulations for online liquor sales within a few weeks; in 2018, vTaiwan assisted in the formulation of new regulations for the platform economy, as a platform for collecting opinions during the legislative process of the financial sandbox regulations. 
+💡 Using real-time machine learning, Pol.is analyzes all the votes on the comments to produce an interactive map that groups like-minded participants together in relation to other, differently minded users. The map lays bare the gaps between various groups — as well as any areas of agreement. Ideally, this incentivizes people to post comments that attract more supporters, creating a path toward consensus.
 
-🔄 Taiwan has another citizen participation platform called Join. Compared to vTaiwan, the Join platform is fully maintained by the government and has a wider range of issues, such as empty house taxes and animal drug management. Compared to hundreds of thousands of people who have discussed issues on vTaiwan, Join's website has had 10.6 million visitors since its launch in 2015—almost half of Taiwan's population. 
+📶 VTaiwan has been used to solve a number of particularly thorny digital policy problems. [In 2015](https://blog.pol.is/uber-responds-to-vtaiwans-coherent-blended-volition-3e9b75102b9b), it helped break an impasse over how best to regulate Uber, which had arrived in Taiwan two years earlier prompting opposition from taxi drivers.
 
-🤝 vTaiwan and Join have opened up a more direct communication channel between the Taiwanese government and citizens, and the government has benefited a lot. Because civil servants not only have access to new ideas and ways of thinking, but also the core of public service needs through the opinions of the public. 
+📲 In 2016, hundreds of ordinary citizens using the platform managed within a few weeks to come up with new regulations for online liquor sales, after multiyear discussions among business and social groups had broken down. And in 2018, vTaiwan helped to create new regulations for the platform economy.
 
-🏆 The President’s Cup hackathon is another digital technology initiative. Since last year, the President has personally participated in this activity, gathering the public service department and citizen friends every year, working together in the hackathon to optimize and think of useful government services. The winning team won't get the bonus, but the promise that the government will actually adopt these good ideas. 
+🔄 Taiwan also relies on another civic engagement platform called Join, this one maintained entirely by the government. Though similar to vTaiwan in that it uses Pol.is to create consensus, Join tackles matters beyond the digital economy, such as vacancy taxes and drug prescriptions for animals. Compared to the hundreds of thousands who have debated issues on vTaiwan, Join’s website has hosted 10.6 million unique visitors — almost half of Taiwan’s population — since it began in 2015.
 
- This year's President's Cup hackathon, one of the five outstanding teams, is composed of civil servants and information specialists from the Information Division of the Court, proposing "referee reading" and "sentencing reference helper" Two ideas are designed to make the judicial system clearer and more transparent. 
+🤝 Together, vTaiwan and Join are opening up more direct lines of communication between Taiwan’s government and its citizens, producing tremendous benefits for the former. Officials are exposed to new ideas and ways of thinking, while identifying core public service demands.
 
- In Taiwan, the issue of drinking and driving has received widespread attention. In recent years, the results of many drunk driving accidents have caused public opinion to boil. People often don't understand why "just judge this?"
+🏆 The [Presidential Hackathon](https://presidential-hackathon.taiwan.gov.tw/en/) is yet another tech initiative bringing Taiwan’s public, private and social sectors together to solve urgent problems. At the event, the first of which was held last year, teams of hackers — composed of either private citizens or government workers — compete to design the most innovative improvements to the nation’s public services. Instead of prize money, the best teams receive a promise from the government that it will apply their ideas.
 
- In the face of public confusion, the court team developed a "sentencing information helper" to let the people Understand why the punishment for the same crime will be different. Take the example of "cannot drive safely" caused by drunk driving. They first find out more than 50,000 related referee books from the existing referee database, and then sort out the conditions for this crime, and then set these conditions on sentencing. Information system. 
+⚖ One of the top teams in this year’s hackathon included officials from the Judicial Yuan, the judicial branch of the Taiwanese government. The team developed two digital tools to make the nation’s judicial system more legible and transparent for everyday Taiwanese.
 
-📲 Anyone who is curious about the judgment, as long as you enter relevant data such as "alcohol breath concentration" and "vehicle type" on this system, you can not only see the appropriate punishment for the case proposal, but also A similar case judgment can be seen. Such an approach would make the public more aware that a single change in alcohol concentration could lead to a very different judgment. 
+🚔 Drunken driving is an issue of broad public concern in Taiwan. And in recent years, the differing sentences handed out to drivers involved in high-profile accidents have led to public confusion about why some punishments can be so light compared with others.
 
-🌏 "Dare to do it, don't be afraid to make mistakes." In the closing speech of the President's Cup hackathon this year, President Tsai Ing-wen encouraged civil servants with hacker spirit. In Taiwan, digital technology is actively promoting citizen dialogue and injecting a spirit of social innovation into the government. By "letting everyone speak", Taiwan is strengthening democracy for the future of the world. 
+🔧 One of the digital tools developed by the Judicial Yuan team addresses this confusion by giving the public a better sense of why punishments can differ for the same crime. Any user can simply enter in the relevant data for a hypothetical drunken-driving offense, such as blood alcohol concentration and the type of vehicle involved. The application then lists the appropriate penalties for the case, while also showing sentences from real-world drunken-driving cases that are similar to the one described. (The team analyzed over 50,000 verdicts from previous drunken-driving offenses to create the tool.) In this way, users get a better understanding of how slight changes in, for example, blood alcohol concentration can lead to radically different penalties.
+
+🌏 In the closing speech of this year’s Presidential Hackathon, President Tsai Ing-wen encouraged government officials to embrace a hacker spirit as they work to meet the public’s needs. “Do it bravely; dare to make mistakes,” she said. In Taiwan, digital technology is boosting civic dialogue and infusing government with the spirit of social innovation. By giving everyone a voice, Taiwan is strengthening its democracy for the future.
