--- a/_i18n/en/_posts/2019-10-21-公務員也能擔任「國際非營利組織無給職理事」.md
+++ b/_i18n/en/_posts/2019-10-21-公務員也能擔任「國際非營利組織無給職理事」.md
@@ -1,23 +1,20 @@
 ---
   layout: "post"
-  title: "Apple column: Civil servants can also serve as \"no non-profit organization for international non-profit organizations\""
-  excerpt: "To sum up, these two \"unpaid\" positions are helpful in promoting social innovation and opening up government business."
+  title: "Civil servants can also serve as “pro bono directorates” for international nonprofit organizations"
+  excerpt: "These two “unpaid” positions are directly related to social innovation and open government."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/f/f50428cabfed29d9ff4add66e64ef83e8e167b41.jpeg"
-  author: "唐鳳、黃子維"
+  author: "Audrey Tang, Zach Huang"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+🗳️ At the end of the National Day holiday, I was in Osaka, Japan, attending Devcon, a conference initiated to improve community governance and research new features. Vitalik Buterin, who is a member on the RadicalxChange Foundation Council, and also the founder of Ethereum shared with us his experience with "Quadratic Voting" in the Presidential Hackathon.
 
- At the end of the National Day holiday, I was in Osaka, Japan, and I was a member of the RadicalxChange Foundation. At the same time, Eitareum founder Vitalik Buterin developed for improving community governance and researching new functions. Devcon, sharing the experience of the "Presidential Cup Hacker" using the "square voting method." 
+📜 Some readers may have never heard of Ethereum or Vitalik. But that doesn't matter — the focus of this article is to share my legal basis for serving on two nonprofit organizations , as something every civil servant can reference: RadicalxChange in the United States, and the Digital Future Society in Spain.
 
-📜 Maybe some of my friends haven’t heard of Ethereum and don’t know Vitalik. But it doesn't matter, because the focus of this article, and what every civil servant can quote, is that I currently serve as the basis for the no-job directors of the two "international" non-profit organizations, RadicalxChange and Digital Future Society of Spain. This matter is not a special case. As long as it meets the requirements and completes the procedure, every civil servant can handle it. First, according to Article 14-2, Item 1 and Article 14-3 of the Civil Service Law, civil servants also serve as non-profit-making businesses or groups, regardless of whether they are paid or not. It should be reported to the service agency for permission. In my case, it is necessary to obtain the consent of the Executive Director beforehand. 
+⚖️ First, according to Article 14(1), Article 14-2(1), and Article 14-3 of the Civil Service Act, a civil servant, stipulated by the law, may not concurrently hold a public employment or business; in the case of adjunct businesses or positions for nonprofit organizations, whether or not they are paid, permission should be requested from the service agency. In my case, it is necessary to obtain consent from the Premier of the Executive Yuan beforehand.
 
- However, in the past, there were only examples of positions held as “domestic” non-profit organizations. Article 3 of the Measures for the Employment of Civil Servants as Non-Profit Enterprises or Groups with Remuneration for Jobs stipulates that the so-called non-profit business or group must be a business or group that is legally required to register with the competent authority or establish a case. The problem is that if it is an "international" non-profit organization, it will not necessarily be registered in the country. 
+🆗 As stipulated by Article 5, Paragraph 1 of the “Regulations Governing Approval for the Employment of Civil Servants at Non-Profit Enterprises or Groups with Remuneration”, if the part-time job has a negative impact on their work, damages the image of the government or civil servant, has the potential for malpractice, or is incompatible with their duty, the organization shall not grant the permission. It is worth noting that although only the "paid" part is specified here, I still consider these two "unpaid" positions with the same criteria, confirming that not only do they not have the above concerns, but also help connect domestic businesses with international businesses by seeking the approval of the Premier. Moreover, I use my time outside of work to perform these two "unpaid" positions and give priority strictly to the civil service.
 
- The logic of "because the law does not stipulate or there is no precedent, it can't be" is not in line with the government's spirit of encouraging the innovation of public servants. Therefore, I consulted my colleagues in the hospital on specialization and issued a letter to the Department of Health and Information. The Syrian Ministry also pointed out that there is no restriction on non-profit organizations that must be registered in the country. 
-
-🆗 In addition, according to Article 5, Item 1 of the Licensing Method, if part-time work has an adverse effect on the job, it is detrimental to the image of the government or civil servant, there is a malpractice for malpractice, and it is incompatible with the nature of the job, The agency shall not permit. Although the "remuneration" position is stipulated here, I still consider these two "unpaid" positions with the same criteria, confirming that there is no such doubts and that the business is in line with international standards. When I perform these two "unpaid" positions, I also use the time outside of work to strictly abide by the principle of giving priority to my job. 
-
- In summary, these two “unpaid” positions have helped to promote social innovation and open government business, and have obtained the consent of the Dean. I will continue to participate in the activities of RadicalxChange and Digital Future Society as a member of the Board of Directors to promote our innovations in related fields globally. I also hope that this experience can be used as a case for other business colleagues to invoke and refer to. 
+🚀 In summary, considering these two "unpaid" positions, which are directly related to social innovation and open government, and with the consent from the Premier, I will continue to participate in RadicalxChange and the Digital Future Society as a member of the board. Along with the activities to increase the opportunity to promote our innovations in related fields globally, I also hope that this experience can be used as a case for other business colleagues to invoke and refer to.
