--- a/_i18n/en/_posts/2019-10-21-公務員也能擔任「國際非營利組織無給職理事」.md
+++ b/_i18n/en/_posts/2019-10-21-公務員也能擔任「國際非營利組織無給職理事」.md
@@ -15,6 +15,10 @@
 
 ⚖️ First, according to Article 14(1), Article 14-2(1), and Article 14-3 of the Civil Service Act, a civil servant, stipulated by the law, may not concurrently hold a public employment or business; in the case of adjunct businesses or positions for nonprofit organizations, whether or not they are paid, permission should be requested from the service agency. In my case, it is necessary to obtain consent from the Premier of the Executive Yuan beforehand.
 
-🆗 As stipulated by Article 5, Paragraph 1 of the “Regulations Governing Approval for the Employment of Civil Servants at Non-Profit Enterprises or Groups with Remuneration”, if the part-time job has a negative impact on their work, damages the image of the government or civil servant, has the potential for malpractice, or is incompatible with their duty, the organization shall not grant the permission. It is worth noting that although only the "paid" part is specified here, I still consider these two "unpaid" positions with the same criteria, confirming that not only do they not have the above concerns, but also help connect domestic businesses with international businesses by seeking the approval of the Premier. Moreover, I use my time outside of work to perform these two "unpaid" positions and give priority strictly to the civil service.
+🌐 As stipulated under Article 3 of the "Regulation Permitting the Paid Employment of Civil Servants in Non-Profit Businesses or Groups", the nominated non-profit businesses or groups must be a "business or group legally registered or filed and established with the authorizing department". The problem is that when it comes to an "international" non-profit organization, the organization may not necessarily be registered or established in the country.
+
+💡 Logically, the reasoning that "something is impermissible just because it is neither stipulated by nor has precedence under the law" is inconsistent with the government's ethos of encouraging the innovative spirit of civil servants. For this reason, I have consulted my colleagues who specialize in the relevant law and submitted a confirmation request to the Ministry of Civil Service. The Ministry then indicated that there is no restriction that a non-profit organization must be registered in the country.
+
+🆗 As stipulated by Article 5, Paragraph 1 of the regulation, if the part-time job has a negative impact on their work, damages the image of the government or civil servant, has the potential for malpractice, or is incompatible with their duty, the organization shall not grant the permission. It is worth noting that although only the "paid" part is specified here, I still consider these two "unpaid" positions with the same criteria, confirming that not only do they not have the above concerns, but also help connect domestic businesses with international businesses by seeking the approval of the Premier. Moreover, I use my time outside of work to perform these two "unpaid" positions and give priority strictly to the civil service.
 
 🚀 In summary, considering these two "unpaid" positions, which are directly related to social innovation and open government, and with the consent from the Premier, I will continue to participate in RadicalxChange and the Digital Future Society as a member of the board. Along with the activities to increase the opportunity to promote our innovations in related fields globally, I also hope that this experience can be used as a case for other business colleagues to invoke and refer to.
