--- a/_i18n/en/_posts/2019-10-24-商周專欄-眾人之事-眾人助之.md
+++ b/_i18n/en/_posts/2019-10-24-商周專欄-眾人之事-眾人助之.md
@@ -1,27 +1,26 @@
 ---
   layout: "post"
-  title: "Business Week column: Everyone's business, everyone helps"
-  excerpt: "The complete historical data of the government e-procurement network has been made public to academic researchers this year, but this is not the case in most countries."
+  title: "All for one and one for all"
+  excerpt: "The complete historical data of Taiwan government’s electronic procurement network has been made public to academic researchers this year, though this is not the case in most countries."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/6/6702fb68a013249c4482b34d60792fdebc43b342.jpeg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+🗽 When I was in New York in September, I befriended [Kareem Elbayar](https://twitter.com/kelbayar), a partnership manager of the United Nations (UN). He introduced me to the United Nations Office for the Coordination of Humanitarian Affairs (UNOCHA) Humanitarian Data Exchange (HDX) program.
 
- When I went to New York in September, I met a [friend who works at the United Nations](https://twitter.com/kelbayar) and he introduced me to the united nations office for the coordination of humanitarian affairs (unocha). humanitarian data exchange (hdx) program. 
+⏳ According to UN estimates, more than 130 million people from 42 countries worldwide are in need of humanitarian assistance this year. The cost is conservatively estimated to be US$21.9 billion. As of June this year, more than 70.80 million people have been displaced worldwide, an unprecedented historical high. In the presence of a huge and complex humanitarian crisis, a major challenge for all of us lies in how to provide immediate relief in the most critical periods.
 
- According to United Nations estimates, more than 130 million people in 42 countries around the world need humanitarian assistance this year, and conservative estimates will cost $21.9 billion. As of June this year, more than 70.80 million people have been displaced worldwide, an unprecedented historical high. In the face of a huge and complex humanitarian crisis, how to grasp the prime time of aid and provide immediate relief has become a major difficulty for us. 
+🔢 Therefore, the HDX team decided to use "data for humanitarian assistance" to help define common standards for information, so that colleagues who work in humanitarian assistance everywhere can use the same tools to assess different situations. For the humanitarian aid work, which region and when do you need resources? A minor inaccuracy can lead to a significant miscalculation. By having complete information, we can ensure fast and accurate decisions to meet the actual needs.
 
-🔢 Therefore, the HDX team decided to use “data for humanitarian assistance” to help develop common standards for data, so that friends who work in humanitarian assistance can use the same tools to assess different situations. For the humanitarian aid work, which region and when do you need resources? Once lost, it’s a thousand miles. Through the complete information, we can ensure that the decisions made are fast and correct, and the actual needs are cut. 
+📈 Currently, HDX has published more than 10,000 data sets in 250 regions around the world, which can be shared and accessed by everyone. In addition, HDX is committed to the development of Predictive Analytics for humanitarian aids. Everyone is invited to review the past and present data of the same region so that potential problems can be understood in advance to prevent crises before they occur.
 
- Now, HDX has published more than 10,000 data sets in 250 locations around the world, and anyone can share it. In addition, HDX is also committed to the development of Humanitarian Aid's Predictive Analytics, which invites people to review the past and present data of the same region, and to grasp possible problems in advance to prevent problems before they occur. 
+🌐 Using the same concept, Taiwan's [Civil IoT platform](https://ci.taiwan.gov.tw/index_en.aspx) adopts the internationally standardized SensorThings API. For water resources, air quality, or even disaster prevention information, the world's academic researchers and hands-on workers can get more comprehensive help through these openly available data.
 
- Using the same concept, Taiwan's "People's Livelihood Public Internet of Things" adopts the international common standard SensorThings API, whether it is water resources or air quality, or even disaster prevention information, the world's academic research, practitioners, All of these open materials can be used to get more comprehensive help. 
+📒 Taiwan ranks among the best in the world in terms of transparency of government information. For example, the complete historical data of the government's electronic procurement network has been [made public to academic researchers](https://gazette2.nat.gov.tw/EG_FileManager/eguploadpub/eg025179/ch06/type2/gov51/num12/Eg.htm) this year, though this is not the case in most countries. Therefore, in the Presidential Hackathon in July this year, we collaborated with the Open Contracting Partnership (OCP). Many participating teams from various countries were inspired by the experiences of Taiwan for more good ideas.
 
-📒 The transparency of government data, Taiwan ranks among the best in the world. For example, the complete historical data of the government e-procurement network has been published [to academic researchers] this year (https://gazette2.nat.gov.tw/EG_FileManager/eguploadpub/eg025179/ch06/type2/gov51/num12/Eg.htm ), but this is not the case in most countries. Therefore, in the "Presidential Cup Hacker" in July this year, we cooperated with the Open Contracting Partnership (OCP). Many participating teams from various countries can use the experience of Taiwan to inspire many good ideas. 
+🏆 For example, the [CoST](https://www.open-contracting.org/2019/08/28/build-better-build-right-a-new-tool-for-sustainable-climate-resilient-infrastructure/) team led by Minister of Transparency of Honduras is actively using procurement materials to make environmental impact assessments more transparent and to resolve conflicts in economic development and public land use. The [Mentadak](https://www.open-contracting.org/2019/08/23/cartelogy-a-tool-for-fair-competition-and-corruption-free-public-procurement-in-malaysia/) team from Malaysia also uses open procurement data standards to identify conflicts of interest in the procurement process. This reduces the possibility of fraud and helps good manufacturers participate in public construction. Both teams won the hackathon at the end.
 
- For example, the [CoST] led by the AIA Honduran Transparency Minister (https://www.open-contracting.org/2019/08/28/build-better-build-right-a-new -tool-for-sustainable-climate-resilient-infrastructure/)" team is actively using procurement materials to make environmental impact assessment more transparent, to resolve economic development and land use conflicts; "Mentadak" from Malaysia (https:/ /www.open-contracting.org/2019/08/23/cartelogy-a-tool-for-fair-competition-and-corruption-free-public-procurement-in-malaysia/)" team, also using open procurement materials Standards to identify conflicts of interest in the procurement process, reduce the possibility of fraud, and then assist good manufacturers to participate in public construction. Both teams eventually won the international pine win. 
-
- The success of Taiwan's experience is not focused on the quantity of information, but on the core spirit of social innovation - "the things of all, the people help", using Data Collaboratives, together with the international community. make a contribution. 
+🚸 The success of Taiwan's experience does not lie in the amount of information, but in the core spirit of social innovation - "all for one and one for all". Through Data Collaboratives, we are contributing along with the international community.
