--- a/_i18n/en/_posts/2017-09-10-ray2017.md
+++ b/_i18n/en/_posts/2017-09-10-ray2017.md
@@ -1,7 +1,7 @@
 ---
   layout: "post"
-  title: "Young students' medical examination government website digital service project"
-  excerpt: "Through the \"College Student Public Sector Apprenticeship Program\", recruit young students to collaborate and check whether the \"Second and Tertiary Organs' Websites of the Executive Yuan\" are compatible with Safari."
+  title: "Government website and digital services Rescue Action by Youth project"
+  excerpt: "Through the \"College Student Public Sector Internship Program\", we recruit young students to collaborate and check whether the \"Second and Third-level agencies' Websites of the Executive Yuan\" are compatible with Safari browser."
   image: "https://user-images.githubusercontent.com/7321879/30552487-b5ddd068-9cd0-11e7-8773-f94f81af7a7c.png"
   author: "簡就可"
   category: "project"
@@ -12,9 +12,7 @@
     - "UX"
 ---
 
-__auto-translated__
-
-## Preparation phase
+## Preparation
 
 In May of 2018, the online tax filing system was not compatible with the Safari browser, causing complaints from the public. Later, when Mac users operated the annuity trial system, they also encountered obstacles. 
 
@@ -34,21 +32,21 @@ After evaluating Google Forms and Github, the PDIS team decided to unify the ins
 
 One of the reasons for using Discourse is that you can set the template to establish the return format, and the format examples can be used for reference. 
 
-## Work Time Judgment
+## Working Time
 
 In view of the difficulty in determining the working hours for remote work, the PDIS team decided to use "number of processing sites" as the benchmark for 1 hour and 0.5 hours. 
 
-## Division of work design
+## Divide and Conquer
 
 All trainee groups, a group of 2 general students with 1 information student. After the general students catch the insects (find the webpage problem), the information students will check and propose an improved solution (code). The engineers of the PDIS team also served as "Little Angels" and assisted when the classmates closed. It is worth noting that this project is based on proactive value, so the little angel is only a secondary role, and the project is still spontaneously coordinated by the students. 
 
-## SLACK
+## Remote Co-working
 
 To facilitate remote work, the PDIS team and the trainee use the communication software Slack as a communication channel. If you have problems checking the webpage or writing a report, you can ask questions at any time. 
 
 ---
 
-## Related files
+## Reference
 
 - [RAY Project Summary](https://docs.google.com/document/d/1frpcibmwbz0sjofob6diukm6or3slcpfina6pevcjtk/){:target="_blank" }
 
