--- a/_i18n/en/_posts/2019-11-14-商周專欄-不只共同起源-更要分享未來.md
+++ b/_i18n/en/_posts/2019-11-14-商周專欄-不只共同起源-更要分享未來.md
@@ -1,25 +1,24 @@
 ---
   layout: "post"
-  title: "Business Week column: not only common origin, but also share the future"
-  excerpt: "The complete historical data of the government e-procurement network has been made public to academic researchers this year, but this is not the case in most countries."
+  title: "Sharing not only a Common Origin, but also a Common Future"
+  excerpt: "Discussing social innovation in our ancestral continent is indeed of great significance."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/0/0ce59c16b3a62d6c85908d7370e1fe69664dacd0.jpeg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+🌍 Over the past three years, I have led a delegation to participate in the "Social Enterprise World Forum" every year. This year was no exception. The conference was held in turn on each of the five continents. In October, myself and 45 partners from all over the world went to Ethiopia in Africa to share Taiwan's experience.
 
- In the past three years, I have led a delegation to participate in the "Social Enterprise World Forum" every year. This year is no exception. The conference was held in turn by the five continents. Therefore, in October, I and 45 partners from all walks of life went to Africa to share the Taiwan experience in Ethiopia. 
+🔬 For many people, the African continent seems far away. But in this forum, I have seen that the challenges faced by our friends in Africa are the same problems that Taiwan has faced. For our African friends, our experience is precious. The “$1 Fast Screening for Tuberculosis” treatment from WellGen Medical in Taiwan is one of them.
 
- For many people, the African continent seems to be far away. But in this forum, I have seen the challenges faced by African friends. They are also the problems that Taiwan has faced. For these friends, our experience is very precious. Taiwan’s social innovation company, Weijie Biomedical, is one of the “one dollar fast screening tuberculosis”. 
+😷 At present, the main detection method for tuberculosis is the analysis of sputum, collected by the hospital, through a microscope by an laboratory technician. This practice is not only time- and labor-consuming, but also makes it difficult to accurately confirm the results. The global infection cases are still high. In 2018, more than 250,000 children and 1 million adults died of tuberculosis.
 
- Currently, the main method of detecting tuberculosis is after the sputum is collected by the hospital, and the inspector then interprets the specimen through the microscope. This practice is not only time-consuming and labor-intensive, but also difficult to accurately confirm the results, and the global infection cases are still high. In 2018, 250,000 children and more than 1 million adults died of tuberculosis. 
+🏥 To this end, the automatic microscopy system developed by WellGen Medical, combined with AI image recognition, can greatly reduce the cost of tests, in addition to improving case detection sensitivity and solving the issue of insufficient medical staff in remote areas. Take the example of the WHO-recommended xPert detection tool, where each use costs almost US$10. Through this new system, the quick tuberculosis screening costs US$1 each time. At present, WellGen Medical's revenue is gradually expanding, and they are already planning on deploying the system worldwide.
 
-|To this end, the automatic microscopy system developed by Weijie, combined with AI image recognition, can greatly reduce the inspection cost, in addition to improving the sensitivity of case detection and solving the problem of insufficient medical manpower in remote areas. Take [WHO's recommended testing tool xPert](https://www.tb.org.tw/uploads/104_w/02.pdf) as an example, which costs nearly $10 each time. Through this system, the tuberculosis quick screening is only $1 each time. Weijie has gradually expanded its revenue and plans to promote the system to the world in the future. 
+🇹🇼 The practice of the Taiwanese government has also struck a chord locally. Before, the CEO of Skills for U, Huang Weixiang, proposed in the Executive Yuan's Youth Advisory Committee that after the team received the award from the national vocational skills competition, they can also participate in on the spot education. Not only will they be cheered in the National Day parade, but they will also be self-sufficient. At the "Youth Participation in Innovation" session, I explained how the youth lead our policies. Eleni Zaude Gabre-Madhin, an economist on the panel, was impressed. After the meeting, Eleni invited me to visit blueSpace, her co-working space.
 
-🇹🇼 The promotion of the Taiwan government has also triggered local resonance. Previously, the chief executive of the Skills for U, Huang Weixiang, proposed in the Executive Yuan Youth Advisory Committee that the technical staff competition can be put into the teaching site after winning the prize. Not only will they be cheered during the National Day parade, but they will also be self-sufficient. In the "Youth Participation in Innovation" session, I explained how the youth guide the policy. Eleni Zaude Gabre-Madhin, an economist at the same venue, was impressed. After the meeting, Eleni invited me to visit the blueSpace, his co-working space. 
+🍹 Three years ago, Eleni founded blueMoon, Ethiopia's first innovation incubator that combines agricultural enterprises and youth development while striving to train outstanding young entrepreneurs aged 15 to 29, as an investment in agricultural improvement and innovation. BlueSpace is a service provided by blueMoon. "How can we spread African food to the whole world?" When I arrived, many young innovators were discussing the brand marketing of African agriculture. I received a warm response when I brought up the case of successfully converting Taiwanese bubble tea into various products and how it became an example of a creative global cuisine.
 
- Three years ago, Eleni founded Ethiopian for the first time to combine the blueMoon new seed base of agricultural enterprises and youth development, and strive to train outstanding young entrepreneurs aged 15 to 29 to invest in agricultural innovation and innovation. blueSpace is the base. A service provided. "How to spread African food to the whole world?" When I arrived, many young friends were discussing the brand marketing of African agriculture. I was able to successfully convert various products into Taiwanese pearl milk tea and become an example of global creative cuisine. 
-
- Unearthed from the famous humanoid fossil "Lucy" in Ethiopia, East Africa is widely regarded as the origin of mankind. I believe that discussing social innovation in the common hometown of mankind this time is indeed of great significance. The descendants of Lucy stepped out of Africa and opened up human civilization – just as many pioneers on the road to social innovation have become models. 
+👣 The unearthing of the famous hominid fossil "Lucy" in Ethiopia has made East Africa widely regarded as the origin of mankind. I believe that discussing social innovation in our ancestral continent is indeed of great significance. The descendants of Lucy stepped out of Africa and opened up human civilization. Just like many pioneers on the road to social innovation — they have become an example for others to follow.
