--- a/_posts/2019-11-14-商周專欄-不只共同起源-更要分享未來.md
+++ b/_posts/2019-11-14-商周專欄-不只共同起源-更要分享未來.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 商周專欄：不只共同起源，更要分享未來
-excerpt: 政府電子採購網的完整歷史資料，已經在今年對學術研究者公開，但大多數國家並非如此。
+excerpt: 我認為，這次在人類共同的故鄉討論社會創新，確實意義非凡。
 image: https://talk.pdis.nat.gov.tw/uploads/default/original/2X/0/0ce59c16b3a62d6c85908d7370e1fe69664dacd0.jpeg
 author: 唐鳳、彭筱婷
 category: blog
