--- a/_i18n/en/_posts/2019-11-14-得其歡樂.md
+++ b/_i18n/en/_posts/2019-11-14-得其歡樂.md
@@ -1,21 +1,22 @@
 ---
   layout: "post"
-  title: "Have fun"
-  excerpt: "Taiwan, brave and confident, and not divided, is the premise of all answers."
+  title: "Can't Stop This Party"
+  excerpt: "A brave, confident, and undivided Taiwan is the premise of all answers."
   image: "https://audreyt.org/photo_2019-11-14_11-56-39.jpg"
-  author: "唐鳳、黃子維"
+  author: "Audrey Tang, Zach Huang"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+🔽 The "Can't Stop This Party" is holding its founding meeting this afternoon. In recognition of the idea that joy promotes generational integration and realizes freedom and democracy, I sent a flower basket based on catmint as a token of my blessing and support.
 
-🔽 "Happy Can't Party" held an inaugural meeting this afternoon. Based on the idea of promoting the communion of generations and achieving freedom and democracy with joy, I sent a pot of flowers based on catnip to show blessing and support. Twenty years ago, several young people put forward "happy hopes", trying to dilute the long-standing tragic atmosphere of democratic development, and open more exchanges and dialogues between generations and ethnic groups through different ways. Mutual understanding. The results are well known: they successfully reversed the political arena in Taipei and changed the fate of Taiwan. 
+🌱 More than 20 years ago, several young people put forward the concept of "Happy & Hope," in an attempt to dilute the tragic atmosphere accumulated in the development of democracy, and to open up more communication and understanding between generations and ethnic groups through different means. The results are well known: They have turned politics around in Taipei, and further, Taiwan's fortunes.
 
- The current social environment, including "Mango Dry", is facing various challenges. For many friends, it is necessary to be cautious and serious. There is nothing wrong with thinking like this. 
+🥭 Today, the so-called "Dried Mango" reminds us that we are indeed facing formidable social and environmental challenges. For many friends, caution and seriousness are essential. There's nothing wrong with that.
 
- However, Taiwan, which is brave and confident and not divided, is the premise of all answers. In other words, if we fall into internal friction and stop listening to each other, we may lose the freedom and democracy we cherish today. 
+🌳 But, a brave, confident, and undivided Taiwan is the premise of all answers. In other words, if we get caught in the internal conflict and stop listening to each other, we might risk losing the liberal democracy we cherish today.
 
- Therefore, any way to promote dialogue and build consensus is worth more encouragement and experimentation. 
+🏡 Therefore, any way to promote dialogue and build consensus deserves encouragement and experiment.
 
-🌏 That is where you want to be. 
+🌏 That is where the hope is.
