* host images on talk pdis

--- a/_i18n/en/_posts/2019-11-14-得其歡樂.md
+++ b/_i18n/en/_posts/2019-11-14-得其歡樂.md
@@ -2,7 +2,7 @@
   layout: "post"
   title: "Can't Stop This Party"
   excerpt: "A brave, confident, and undivided Taiwan is the premise of all answers."
-  image: "https://audreyt.org/photo_2019-11-14_11-56-39.jpg"
+  image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/b/bd6de5956479ae028b84d4b3c6e9196d9bf766f1.jpeg"
   author: "Audrey Tang, Zach Huang"
   category: "blog"
   tags: 
