--- a/_posts/2019-11-14-得其歡樂.md
+++ b/_posts/2019-11-14-得其歡樂.md
@@ -2,7 +2,7 @@
 layout: post
 title: 得其歡樂
 excerpt: 勇敢自信、不被分化的臺灣，是所有答案的前提。
-image: https://audreyt.org/photo_2019-11-14_11-56-39.jpg
+image: https://talk.pdis.nat.gov.tw/uploads/default/original/2X/b/bd6de5956479ae028b84d4b3c6e9196d9bf766f1.jpeg
 author: 唐鳳、黃子維
 category: blog
 tags: [社會創新]
