--- a/_posts/2019-11-17-人才不是流失-而是循環.md
+++ b/_posts/2019-11-17-人才不是流失-而是循環.md
@@ -13,7 +13,9 @@ tags:
 
 💡 我的辦公室（行政院公共數位創新空間，PDIS）也受邀為 TCA 舉辦的線上公眾諮詢提供技術服務。比照 AIT 與外交部合辦的「『智』同道合–數位對話」系列，透過 pol.is 系統建構對話平台（網址：[tca.talksto.tw](https://tca.talkto.tw)），讓對此議題有興趣的參與者，都能發表意見、集思廣益。
 
-🔄 人才外流，被不少人視為嚴肅的國家問題。然而，以台積電創辦人張忠謀為例，我們可以發現，只要有好的環境與制度，人才不會只單向流動，而是循環對流。同時，跨國移動過程中所帶動的經驗分享、文化融合與社會交往，更讓人才循環的價值，外溢到社會的不同層面。當然，4G、5G 等通訊科技的應用與普及，也讓遠距工作方興未艾，在在都使人才對流，更為容易、更為即時。
+🔄 人才外流，被不少人視為嚴肅的國家問題。然而，以台積電創辦人張忠謀為例，我們可以發現，只要有好的環境與制度，人才不會只單向流動，而是循環對流。
+
+📶 同時，跨國移動過程中所帶動的經驗分享、文化融合與社會交往，更讓人才循環的價值，外溢到社會的不同層面。當然，4G、5G 等通訊科技的應用與普及，也讓遠距工作方興未艾，在在都使人才對流，更為容易、更為即時。
 
 🍀 TCA 以培養一群有專業能力、具國際視野，與精通數位科技的人才為宗旨，提出四項目標：
 
