--- a/_i18n/en/_posts/2019-11-17-人才不是流失-而是循環.md
+++ b/_i18n/en/_posts/2019-11-17-人才不是流失-而是循環.md
@@ -1,29 +1,32 @@
 ---
   layout: "post"
-  title: "Apple column: talent is not lost, but circulation"
-  excerpt: "Taiwan is the \"best place to move and work\" in the minds of foreigners in other countries."
+  title: "Talents don't get lost, only circulated"
+  excerpt: "Taiwan is considered by foreigners all over the world as the “best place to move to and work in.”"
   image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/d/d2d9c7bf3088d67c5150e2e658a5dcae2f3a6e66.png"
-  author: "唐鳳、黃子維"
+  author: "Audrey Tang, Zach Huang"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+🛰 This April, the Talent Circulation Alliance (TCA), jointly sponsored by the American Institute in Taiwan (AIT), the Ministry of Economic Affairs and the Ministry of Economic Affairs, was officially established.
 
- In April of this year, the Talent Circulation Alliance (TCA), jointly sponsored by the American Association of Taiwanese (AIT), the Ministry of Economic Affairs, and the Ministry of Economic Affairs, was formally established. 
+💡 My office (Public Digital Innovation Space, PDIS) was also invited to provide technical services for the online public consultation conducted by TCA. Similar to the Digital Dialogue series jointly organized by AIT and the Ministry of Foreign Affairs, the pol.is system has been used to construct a dialogue platform (website: [tca.talksto.tw](https://tca.talksto.tw)) to enable participants interested in this topic to express opinions and brainstorm ideas.
 
-💡 My office (Public Digital Innovation Space, PDIS) was also invited to provide technical services for online public consultation conducted by TCA. In contrast to the "Smart"-Digital Dialogue series jointly organized by AIT and the Ministry of Foreign Affairs, the dialogue platform is constructed through the pol.is system (website: [tca.talksto.tw](https://tca.talkto.tw)) Participants who are interested in this topic can express their opinions and brainstorm ideas. 
+🔄 Brain drain is regarded by many people as a serious national issue. Yet, when we consider the example of Morris Chang, founder of TSMC, we can see that as long as a conducive environment and system exist, talents do not just flow in one direction but rather in circulation.
 
-🔄 Brain drain is considered a serious national issue by many people. However, taking Zhang Zhongmou, the founder of TSMC, as an example, we can find that as long as there is a good environment and system, talents will not only flow in one direction, but in circulation. At the same time, the experience sharing, cultural integration and social interactions promoted in the process of transnational mobility have made the value of talent circulation overflow to different levels of society. Of course, the application and popularization of communication technologies such as 4G and 5G also make remote work in the ascendant. It is easier and more immediate to make talent convection. 
+📶 The experience sharing, cultural integration and social interaction promoted by a transnational mobility process enabled the value of talent circulation flow into all levels of society. Of course, teleworking arises with 4G and 5G technologies, further enabling mutual exchange of talented people at speed of light.
 
-🍀 TCA aims to cultivate a group of professionals with professional competence, international vision and proficient in digital technology. Four goals are proposed:
+🍀 TCA aims to cultivate a talent pool that possesses professional competence, international vision and digital technology expertise. Four goals have been proposed:
 
-🔭 First, the success story of Taiwanese industry in digital age. In fact, Taiwan’s industry has grown to the present, and it has been a key to returning to China for overseas students who have studied or employed overseas. As long as such a story can continue to be staged, it will ensure that the talent cycle in Taiwan will not be interrupted. 
+🔭 First, recreating a success story for Taiwan's industry in a digital age. In fact, one of the key reasons that Taiwan’s industry has been able to develop to its current state is because of the repatriation of talents who have studied or worked abroad. As long as this story can continue, the circulation of talents in Taiwan will surely extend into the future.
 
- Second, to promote the flow of talent between Taiwan and the United States, as well as other economies with similar concepts. 
+💼 Second, promoting the circulation of talent among like-minded economies, including the United States.
 
- Third, the talent pool is built on the ground, laying the foundation for Taiwan's transformation into the innovation economy. 
+🎫 Third, building a local talent pool and laying a foundation for Taiwan's transformation into an innovation-based economy.
 
- Fourth, enhance Taiwan's international visibility through networks such as the private sector, academic circles and international NGOs, while expanding Taiwan's participation and contribution to solving global problems. In addition, TCA will summarize the key content of the above public consultation into the White Paper of the Talent Circle Major Alliance Program and become the annual "Taiwan White Paper" of the American Chamber of Commerce. As part of the administrative, regulatory and legal barriers that may be faced in promoting talent circulation, specific and pragmatic solutions are proposed as a reference for subsequent government improvement. 
+🌐 Fourth, enhancing Taiwan's international visibility through professional exchange in the private sector, academic circles, and international NGOs, expanding Taiwan's participation in and contribution to global solutions.
 
- In September this year, the "Expat Insider" survey released by the world's largest non-resident community "InterNations" pointed out that Taiwan is the "best of the world". The emigration and workplace, which is the leader in 68 countries, is the second time to win this award. This means that Taiwan does have excellent conditions for attracting talents from all over the world and can definitely gain a place in the global talent cycle. 
+📖 In addition, TCA will summarize the key content of the above public consultation into the "Talents Program Big League Plan White Paper", which will be incorporated into the annual "Taiwan White Paper" of the American Chamber of Commerce. It will target the administrative, regulatory and legal barriers to talent circulation and propose concrete and pragmatic solutions as a reference for subsequent governments to work on.
+
+🥇 In September this year, the "Expat Insider" survey released by the world's largest foreigner community "InterNations" indicated that Taiwan is considered by foreigners all over the world as the "best place to move to and work in". It came first in a list of 68 countries and this is the second time that Taiwan has won this award. This confirms that Taiwan indeed possesses excellent conditions for attracting talents from around the world and can definitely hold its own in the global talent cycle.
